--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -22,7 +22,7 @@ body {
 
 
 /* 3: */
-.header {
+.marketing {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -30,7 +30,7 @@ body {
 }
 
 /* 4: */
-.header h1 {
+.marketing h1 {
     display: inline-block;
     font-size: 48px;
 }
@@ -38,14 +38,14 @@ body {
 
 
 /* 5: */
-.header h1 .seo {
+.marketing h1 .seo {
     color: #d9dcd6;
 }
 
 
 
 /* 6: */
-.header div {
+.marketing div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -55,20 +55,20 @@ body {
 
 
 /* 7: */
-.header div ul {
+.marketing div ul {
     list-style-type: none;
 }
 
 
 
 /* 8: */
-.header div ul li {
+.marketing div ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
 
-/* 9: */
+/* 9:  */
 a {
     color: #ffffff;
     text-decoration: none;
