--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -120,8 +120,8 @@ p {
 }
 
 
-/* 25: */
-.search-engine-optimization {
+/* 25: Consilidate selector into (26,27-deleted) 1*/
+.online-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -129,24 +129,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-/* 26: */
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-/* 27: */
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
+
 /* 28: */
 .search-engine-optimization img {
     max-height: 200px;
