--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -74,35 +74,30 @@ p {
 /*                                 */
 /*                                 */
 /*                                 */
-/* Part 2 of Refactoring (12 - 14) */
-/* Part 2 of Refactoring (25 - 33) */
+/* Part 2 selectors within the     */
+/*  content div                    */
 /*                                 */
 /*                                 */
-/*                                 */
-
-/* 12: */
+/* Next two selectors specify the image location and padding */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
-/* 13: */
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
-
-/* 14: */
+/* This selectors the div element and content class properties (specifications) */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-
-/* 25: Consilidate selector into (26,27-deleted) 1*/
-.search-engine-optimization {
+/* Use of info-social class to select (specifiy/control) elements properties (specifications) more efficiently */
+.info-social {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -110,53 +105,15 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-/* 26: */
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-/* 27: */
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-/* 28: */
-.search-engine-optimization img {
-    max-height: 200px;
-}
-/* 29: */
-.online-reputation-management img {
-    max-height: 200px;
-}
-/* 30: */
-.social-media-marketing img {
-    max-height: 200px;
-}
-/* 31: */
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-/* 32: */
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-/* 33: */
-.social-media-marketing h2 {
+
+.info-social h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-
+.info-social img {
+    max-height: 200px;
+}
 
 
 
